# case-music

./: README.md
.github/workflows/: ci.yml
core/: .eslintrc.json  .gitignore  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
core/backend/: .gitignore  Cargo.toml  tauri.conf.json
core/backend/icons/: icon.icns
core/backend/src/: lib.rs  main.rs  utils.rs
core/src/: App.tsx
core/src-tauri/: Cargo.toml  tauri.conf.json
core/src-tauri/src/: lib.rs  main.rs
core/src-tauri/src/application/: mod.rs
core/src-tauri/src/application/music/: like.rs
core/src-tauri/src/application/system/: login.rs
core/src-tauri/src/client/: mod.rs  resp.rs
core/src-tauri/src/client/impls/: mod.rs
core/src-tauri/src/client/impls/netesae/: mod.rs
core/src-tauri/src/client/impls/netesae_cloud/: error.rs  errors.rs  mod.rs
core/src-tauri/src/client/types/: login_info.rs  mod.rs  song_info.rs
core/src-tauri/src/modules/: mod.rs
core/src-tauri/src/types/: login_info.rs  mod.rs
core/src/app/: globals.css  layout.tsx  page.tsx
core/src/components/: ai-dialog.tsx  auth-dialog.tsx  featured-section.tsx  mobile-nav.tsx  mobile-playback-view.tsx  mobile-player.tsx  player-control.ts  player.tsx  playlist-skeleton.tsx  recently-played.tsx  sidebar.tsx  top-charts.tsx  user-nav.tsx
core/src/hooks/: i18n.ts  use-ai-source.tsx  use-audio-source.tsx  use-auth.tsx  use-like-list.ts  use-music-data.ts  (+2 more)
docs/: ai-api.md  backend-api.md  music-api.md
docs/compile-android/: compile -android.md
readmes/: zh.md
(+83 files in other folders)
