[package]
name = "core"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ncm-api = { git = "https://github.com/malefooo/netease-cloud-music-api.git", branch = "master", package = "netease-cloud-music-api" }
#ncm-api = {path = "../../../netease-cloud-music-api", package = "netease-cloud-music-api"}
anyhow = { version = "1.0.93", features = ["backtrace"] }
reqwest = { version = "0.12.9", features = ["json"] }
async-trait = "0.1.83"
tokio = { version = "1.35.0", features = ["full"] }
rand = "0.8.5" # 确保版本是最新的
qrcode-generator = "5.0.0"
once_cell = { version = "1.20.2", features = ["default"] }
strum = "0.26.3"
strum_macros = "0.26.3"
